--- a/src/styles/Testimonials.css
+++ b/src/styles/Testimonials.css
@@ -102,7 +102,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 99px;
-    border: 1px solid #DDD;
+    border: 1px solid #3b3b3b;
     background: #FFF;
 }
 
@@ -114,7 +114,7 @@
 
 #test-left-arrow-svg,
 #test-right-arrow-svg {
-    fill: #DDDDDD;
+    fill: #3b3b3b;
 }
 
 .test-left-arrow:hover #test-left-arrow-svg,
@@ -225,6 +225,8 @@
 
     .slick-track.slick-track {
         gap: 0;
+        align-items: center;
+
     }
 
     .slick-slider.slick-slider {
