--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,13 @@
 @font-face {
   font-family: "SF Pro Display";
   src: local("SF Pro Display"), url("./fonts/SFPRODISPLAYBOLD.OTF") format("opentype");
-  font-weight: normal;
+  font-weight: 800;
+}
+
+@font-face {
+  font-family: "SF Pro Display";
+  src: local("SF Pro Display"), url("./fonts/SFPRODISPLAYMEDIUM.OTF") format("opentype");
+  font-weight: 400;
 }
 
 * {
@@ -11,4 +17,8 @@
   padding: 0;
   box-sizing: border-box;
 
+}
+
+p {
+  margin: 0;
 }
