--- a/frontend/src/styles/Hero.css
+++ b/frontend/src/styles/Hero.css
@@ -35,8 +35,7 @@
 }
 
 .right-arrow-2 {
-    position: relative;
-    top: 20px;
+    vertical-align: middle;
 }
 
 .hero-bottom {
@@ -57,6 +56,7 @@
     line-height: 32px;
     /* 160% */
     text-transform: uppercase;
+    text-decoration: none;
 }
 
 .craft-career {
@@ -128,6 +128,7 @@
 
 .cc-apply-top {
     /* width: 100%; */
+    text-decoration: none;
 }
 
 @media(width<1024px) {
